# pykasten

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: automerge.yml  tests.yml
doc/: devnotes.md  install.md  requirements_gui_widget.md  requirements_gui_window.md  requirements_logging.md
src/pykasten/: __init__.py  __main__.py  _cli.py  cli.py  recipekasten.py  recipes.py
src/pykasten/examplebrowser/: __init__.py  gui.py
src/pykasten/guikasten/: __init__.py  consoleDock.py  docking.py  mainwindow.py  misc.py  widgets.py
src/pykasten/logkasten/: __init__.py  general.py  gui.py
test/: conftest.py  test_cli.py  test_log.py  test_recipes.py  test_repeat.py
